adição do arquivo JavaScript

--- a/create-point.html
+++ b/create-point.html
@@ -52,6 +52,7 @@
                                 <select name="city" disabled>
                                     <option value="">Selecione sua cidade</option>
                                 </select>
+                                <input type="hidden" name="states">
                             </div>
                         </div>
 
@@ -64,5 +65,6 @@
                 </form>
             </main>
         </div>
+        <script src="/scripts/create-point.js"></script>
     </body>
 </html>
