--- a/create-point.html
+++ b/create-point.html
@@ -26,30 +26,30 @@
 
                         <div class="field">
                             <label for="name">Nome da entidade</label>
-                            <input type="text" name="name">
+                            <input type="text" name="name" required>
                         </div>
 
                         <div class="field-group">
                             <div class="field">
-                                <label for="address">Endereço</label><input type="text" name="address">
+                                <label for="address">Endereço</label><input type="text" name="address" required>
                             </div>
 
                             <div class="field">
-                                <label for="number">Número</label><input type="text" name="number">
+                                <label for="number">Número</label><input type="text" name="number" required>
                             </div>
                         </div>
 
                         <div class="field-group">
                             <div class="field">
                                 <label for="state">Estado</label>
-                                <select name="uf">
+                                <select name="uf" required>
                                     <option value="">Selecione seu Estado</option>
                                 </select>
                             </div>
 
                             <div class="field">
                                 <label for="city">Cidade</label>
-                                <select name="city" disabled>
+                                <select name="city" disabled required>
                                     <option value="">Selecione sua cidade</option>
                                 </select>
                                 <input type="hidden" name="states">
@@ -60,6 +60,14 @@
 
                     <fieldset>
                         <legend><h2>Itens de coleta</h2></legend>
+                        <div class="itens-grid">
+                            <li data-id="1"><img src="/assets/icones/lampadas.svg" alt="Lâmpadas"><span>Lâmpadas</span></li>
+                            <li data-id="2"><img src="/assets/icones/baterias.svg" alt="Pilhas e Baterias"><span>Pilhas e Baterias</span></li>
+                            <li data-id="3"><img src="/assets/icones/papeis-papelao.svg" alt="Papeis e Papelão"><span>Papeis e Papelão</span></li>
+                            <li data-id="4"><img src="/assets/icones/eletronicos.svg" alt="Residuos Eletrônicos"><span>Residuos Eletrônicos</span></li>
+                            <li data-id="5"><img src="/assets/icones/organicos.svg" alt="Residuos Orgânicos"><span>Residuos Orgânicos</span></li>
+                            <li data-id="6"><img src="/assets/icones/oleo.svg" alt="Óleo de cozinha"><span>Óleo de cozinha</span></li>
+                        </div>
                     </fieldset>
                     <button type="submit">Cadastrar ponto de coleta</button>
                 </form>
